--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
         <div style="width: 30%; margin: 25px auto;">
             <form action="/login" method="post">
                 <div class="form-group">
-                    <input class="form-control" type="email" name="email" placeholder="Email" required>
+                    <input class="form-control" type="email" name="username" placeholder="Email" required>
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="password" name="password" placeholder="Password" required>
