--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,10 +4,10 @@
         <div style="width: 30%; margin: 25px auto;">
             <form action="/register" method="post">
                 <div class="form-group">
-                    <input class="form-control" type="email" name="email" placeholder="Email">
+                    <input class="form-control" type="email" name="username" placeholder="Email">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="username" placeholder="Username">
+                    <input class="form-control" type="text" name="name" placeholder="Name">
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="password" name="password" placeholder="Password">
